// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home Page Home page matches snapshot 1`] = `
<div>
  <main
    class="flex flex-col items-center text-xs space-y-16"
  >
    <div
      class="flex md:flex-row w-full flex-col-reverse"
    >
      <div
        class="w-full md:w-1/2 space-y-8"
      >
        <div
          class="text-3xl font-semibold"
          id="home_text"
        >
          Second Chance Support
        </div>
        <div
          class="text-lg text-gray-800 pr-8"
        >
          Second Chance is a website to help people in Texas who were previously convicted of a crime reintegrate with society. We provide statistics to bring awareness to this community, as well as provide lists of re-entry programs and rehabilitation facilities that can be located by proximity.
        </div>
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-11 rounded-md px-8"
        >
          Learn More
        </button>
      </div>
      <div
        class="w-full md:w-1/2 items-center justify-center md:mb-0 mb-8"
      >
        <img
          alt="Person breaking free of chains with sunset behind."
          class="rounded-md"
          src="https://businessdoctors.co.uk/wp-content/uploads/2017/08/shutterstock_631187453-scaled.jpg"
        />
      </div>
    </div>
    <div
      class="text-3xl font-semibold"
    >
      Explore
    </div>
    <div
      class="flex md:flex-row flex-col items gap-4"
    >
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm p-4 flex flex-row space-y-4 items-center hover:bg-gray-50 cursor-pointer"
      >
        <svg
          class="lucide lucide-bar-chart-big mr-2"
          fill="none"
          height="80"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="80"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 3v18h18"
          />
          <rect
            height="7"
            rx="1"
            width="4"
            x="7"
            y="10"
          />
          <rect
            height="12"
            rx="1"
            width="4"
            x="15"
            y="5"
          />
        </svg>
        <div>
          Statistics from 254 Texas Counties
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm p-4 flex flex-row items-center hover:bg-gray-50 cursor-pointer"
      >
        <svg
          class="lucide lucide-school2 mr-2"
          fill="none"
          height="80"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="80"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="10"
            r="1"
          />
          <path
            d="M22 20V8h-4l-6-4-6 4H2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2Z"
          />
          <path
            d="M6 17v.01"
          />
          <path
            d="M6 13v.01"
          />
          <path
            d="M18 17v.01"
          />
          <path
            d="M18 13v.01"
          />
          <path
            d="M14 22v-5a2 2 0 0 0-2-2v0a2 2 0 0 0-2 2v5"
          />
        </svg>
        <div>
          Over 500 Re-Entry Programs
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm p-4 flex flex-row items-center hover:bg-gray-50 cursor-pointer"
      >
        <svg
          class="lucide lucide-cross mr-2"
          fill="none"
          height="80"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="80"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 2a2 2 0 0 0-2 2v5H4a2 2 0 0 0-2 2v2c0 1.1.9 2 2 2h5v5c0 1.1.9 2 2 2h2a2 2 0 0 0 2-2v-5h5a2 2 0 0 0 2-2v-2a2 2 0 0 0-2-2h-5V4a2 2 0 0 0-2-2h-2z"
          />
        </svg>
        <div>
          Over 1000 Rehab Programs
        </div>
      </div>
    </div>
    <iframe
      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
      allowfullscreen=""
      class="md:w-1/2 w-full h-96"
      src="https://www.youtube.com/embed/DczkgbD7JkQ?si=vu7ntaLSY735Cxvp"
      title="YouTube video player"
    />
  </main>
</div>
`;

exports[`Instance Pages Load county page matches snapshot 1`] = `
<div>
  <div
    class="w-full h-full flex flex-col items-center justify-center"
  >
    <div
      class="animate-spin"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        version="1.1"
        viewBox="0 0 16 16"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 16c-2.137 0-4.146-0.832-5.657-2.343s-2.343-3.52-2.343-5.657c0-1.513 0.425-2.986 1.228-4.261 0.781-1.239 1.885-2.24 3.193-2.895l0.672 1.341c-1.063 0.533-1.961 1.347-2.596 2.354-0.652 1.034-0.997 2.231-0.997 3.461 0 3.584 2.916 6.5 6.5 6.5s6.5-2.916 6.5-6.5c0-1.23-0.345-2.426-0.997-3.461-0.635-1.008-1.533-1.822-2.596-2.354l0.672-1.341c1.308 0.655 2.412 1.656 3.193 2.895 0.803 1.274 1.228 2.748 1.228 4.261 0 2.137-0.832 4.146-2.343 5.657s-3.52 2.343-5.657 2.343z"
        />
      </svg>
      <div
        class="opacity-0 absolute"
      >
        Loading
      </div>
    </div>
  </div>
</div>
`;

exports[`Instance Pages Load reentry page matches snapshot 1`] = `
<div>
  <div
    class="w-full h-full flex flex-col items-center justify-center"
  >
    <div
      class="animate-spin"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        version="1.1"
        viewBox="0 0 16 16"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 16c-2.137 0-4.146-0.832-5.657-2.343s-2.343-3.52-2.343-5.657c0-1.513 0.425-2.986 1.228-4.261 0.781-1.239 1.885-2.24 3.193-2.895l0.672 1.341c-1.063 0.533-1.961 1.347-2.596 2.354-0.652 1.034-0.997 2.231-0.997 3.461 0 3.584 2.916 6.5 6.5 6.5s6.5-2.916 6.5-6.5c0-1.23-0.345-2.426-0.997-3.461-0.635-1.008-1.533-1.822-2.596-2.354l0.672-1.341c1.308 0.655 2.412 1.656 3.193 2.895 0.803 1.274 1.228 2.748 1.228 4.261 0 2.137-0.832 4.146-2.343 5.657s-3.52 2.343-5.657 2.343z"
        />
      </svg>
      <div
        class="opacity-0 absolute"
      >
        Loading
      </div>
    </div>
  </div>
</div>
`;

exports[`Instance Pages Load rehab page matches snapshot 1`] = `
<div>
  <div
    class="w-full h-full flex flex-col items-center justify-center"
  >
    <div
      class="animate-spin"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        version="1.1"
        viewBox="0 0 16 16"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 16c-2.137 0-4.146-0.832-5.657-2.343s-2.343-3.52-2.343-5.657c0-1.513 0.425-2.986 1.228-4.261 0.781-1.239 1.885-2.24 3.193-2.895l0.672 1.341c-1.063 0.533-1.961 1.347-2.596 2.354-0.652 1.034-0.997 2.231-0.997 3.461 0 3.584 2.916 6.5 6.5 6.5s6.5-2.916 6.5-6.5c0-1.23-0.345-2.426-0.997-3.461-0.635-1.008-1.533-1.822-2.596-2.354l0.672-1.341c1.308 0.655 2.412 1.656 3.193 2.895 0.803 1.274 1.228 2.748 1.228 4.261 0 2.137-0.832 4.146-2.343 5.657s-3.52 2.343-5.657 2.343z"
        />
      </svg>
      <div
        class="opacity-0 absolute"
      >
        Loading
      </div>
    </div>
  </div>
</div>
`;

exports[`Model Pages Load Counties page matches snapshot 1`] = `
<div>
  <div
    class="flex flex-col space-y-4"
  >
    <div
      class="text-2xl font-semibold"
      id="county_text"
    >
      Counties
    </div>
    <div
      class="flex flex-col md:flex-row gap-2"
    >
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm flex flex-col gap-2 p-4 w-full"
      >
        <div
          class="text-xl font-semibold"
        >
          Filters
        </div>
        <div
          class="flex flex-col w-full space-y-2"
        >
          <div
            class="font-semibold"
          >
            Search: 
          </div>
          <input
            class="flex h-10 w-full rounded-md border focus-visible:outline-none border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground disabled:cursor-not-allowed disabled:opacity-50"
            placeholder="Instance Name"
            value=""
          />
        </div>
        <div
          class="flex flex-col w-full space-y-2"
        >
          <div
            class="font-semibold"
          >
            Filter By 
            typeviolent
            :
          </div>
          <div
            class="grid grid-cols-2 gap-2"
          >
            <input
              class="flex h-10 w-full rounded-md border focus-visible:outline-none border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground disabled:cursor-not-allowed disabled:opacity-50"
              placeholder="typeviolent Lower Rating"
              type="number"
              value="0"
            />
            <input
              class="flex h-10 w-full rounded-md border focus-visible:outline-none border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground disabled:cursor-not-allowed disabled:opacity-50"
              placeholder="typeviolent Upper Rating"
              type="number"
              value="0"
            />
          </div>
        </div>
        <div
          class="flex flex-col w-full space-y-2"
        >
          <div
            class="font-semibold"
          >
            Filter By 
            typeproperty
            :
          </div>
          <div
            class="grid grid-cols-2 gap-2"
          >
            <input
              class="flex h-10 w-full rounded-md border focus-visible:outline-none border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground disabled:cursor-not-allowed disabled:opacity-50"
              placeholder="typeproperty Lower Rating"
              type="number"
              value="0"
            />
            <input
              class="flex h-10 w-full rounded-md border focus-visible:outline-none border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground disabled:cursor-not-allowed disabled:opacity-50"
              placeholder="typeproperty Upper Rating"
              type="number"
              value="0"
            />
          </div>
        </div>
        <div
          class="flex flex-col w-full space-y-2"
        >
          <div
            class="font-semibold"
          >
            Filter By 
            typeother
            :
          </div>
          <div
            class="grid grid-cols-2 gap-2"
          >
            <input
              class="flex h-10 w-full rounded-md border focus-visible:outline-none border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground disabled:cursor-not-allowed disabled:opacity-50"
              placeholder="typeother Lower Rating"
              type="number"
              value="0"
            />
            <input
              class="flex h-10 w-full rounded-md border focus-visible:outline-none border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground disabled:cursor-not-allowed disabled:opacity-50"
              placeholder="typeother Upper Rating"
              type="number"
              value="0"
            />
          </div>
        </div>
        <div
          class="flex flex-col w-full space-y-2"
        >
          <div
            class="font-semibold"
          >
            Filter By 
            typedrug
            :
          </div>
          <div
            class="grid grid-cols-2 gap-2"
          >
            <input
              class="flex h-10 w-full rounded-md border focus-visible:outline-none border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground disabled:cursor-not-allowed disabled:opacity-50"
              placeholder="typedrug Lower Rating"
              type="number"
              value="0"
            />
            <input
              class="flex h-10 w-full rounded-md border focus-visible:outline-none border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground disabled:cursor-not-allowed disabled:opacity-50"
              placeholder="typedrug Upper Rating"
              type="number"
              value="0"
            />
          </div>
        </div>
        <div
          class="flex flex-col w-full space-y-2"
        >
          <div
            class="font-semibold"
          >
            Filter By 
            typetotal
            :
          </div>
          <div
            class="grid grid-cols-2 gap-2"
          >
            <input
              class="flex h-10 w-full rounded-md border focus-visible:outline-none border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground disabled:cursor-not-allowed disabled:opacity-50"
              placeholder="typetotal Lower Rating"
              type="number"
              value="0"
            />
            <input
              class="flex h-10 w-full rounded-md border focus-visible:outline-none border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground disabled:cursor-not-allowed disabled:opacity-50"
              placeholder="typetotal Upper Rating"
              type="number"
              value="0"
            />
          </div>
        </div>
        <div
          class="flex flex-col w-full space-y-2"
        >
          <div
            class="font-semibold"
          >
            Filter By 
            population_rank
            :
          </div>
          <div
            class="grid grid-cols-2 gap-2"
          >
            <input
              class="flex h-10 w-full rounded-md border focus-visible:outline-none border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground disabled:cursor-not-allowed disabled:opacity-50"
              placeholder="population_rank Lower Rating"
              type="number"
              value="0"
            />
            <input
              class="flex h-10 w-full rounded-md border focus-visible:outline-none border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground disabled:cursor-not-allowed disabled:opacity-50"
              placeholder="population_rank Upper Rating"
              type="number"
              value="0"
            />
          </div>
        </div>
        <div
          class="flex flex-col w-full space-y-2"
        >
          <div
            class="font-semibold"
          >
            Filter By 
            population
            :
          </div>
          <div
            class="grid grid-cols-2 gap-2"
          >
            <input
              class="flex h-10 w-full rounded-md border focus-visible:outline-none border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground disabled:cursor-not-allowed disabled:opacity-50"
              placeholder="population Lower Rating"
              type="number"
              value="0"
            />
            <input
              class="flex h-10 w-full rounded-md border focus-visible:outline-none border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground disabled:cursor-not-allowed disabled:opacity-50"
              placeholder="population Upper Rating"
              type="number"
              value="0"
            />
          </div>
        </div>
        <div
          class="items-top flex space-x-2"
        >
          <button
            aria-checked="false"
            class="peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground"
            data-state="unchecked"
            role="checkbox"
            type="button"
            value="on"
          />
          <div
            class="grid gap-1.5 leading-none"
          >
            <label
              class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
              for="terms1"
            >
              Sort By Name/Address (Z - A)
            </label>
          </div>
        </div>
        <button
          class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2 mt-4"
        >
          Apply
        </button>
      </div>
    </div>
    <div
      class="w-full h-full flex flex-col items-center justify-center"
    >
      <div
        class="animate-spin"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          version="1.1"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 16c-2.137 0-4.146-0.832-5.657-2.343s-2.343-3.52-2.343-5.657c0-1.513 0.425-2.986 1.228-4.261 0.781-1.239 1.885-2.24 3.193-2.895l0.672 1.341c-1.063 0.533-1.961 1.347-2.596 2.354-0.652 1.034-0.997 2.231-0.997 3.461 0 3.584 2.916 6.5 6.5 6.5s6.5-2.916 6.5-6.5c0-1.23-0.345-2.426-0.997-3.461-0.635-1.008-1.533-1.822-2.596-2.354l0.672-1.341c1.308 0.655 2.412 1.656 3.193 2.895 0.803 1.274 1.228 2.748 1.228 4.261 0 2.137-0.832 4.146-2.343 5.657s-3.52 2.343-5.657 2.343z"
          />
        </svg>
        <div
          class="opacity-0 absolute"
        >
          Loading
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Model Pages Load Reentries page matches snapshot 1`] = `
<div>
  <div
    class="flex flex-col space-y-4"
  >
    <div
      class="text-2xl font-semibold"
      id="reentry_text"
    >
      Re-Entry Resources
    </div>
    <div
      class="rounded-lg border bg-card text-card-foreground shadow-sm flex flex-col gap-2 p-4"
    >
      <div
        class="text-xl font-semibold"
      >
        Filters
      </div>
      <div
        class="flex flex-col w-full space-y-2"
      >
        <div
          class="font-semibold"
        >
          Search: 
        </div>
        <input
          class="flex h-10 w-full rounded-md border focus-visible:outline-none border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground disabled:cursor-not-allowed disabled:opacity-50"
          placeholder="Instance Name"
          value=""
        />
      </div>
      <div
        class="flex flex-col w-full space-y-2"
      >
        <div
          class="font-semibold"
        >
          Select Program Type:
        </div>
        <button
          aria-autocomplete="none"
          aria-controls="radix-:re:"
          aria-expanded="false"
          class="flex h-10 items-center justify-between rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 w-[180px]"
          data-placeholder=""
          data-state="closed"
          dir="ltr"
          role="combobox"
          type="button"
        >
          0
           Selected
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down h-4 w-4 opacity-50"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </button>
      </div>
      <div
        class="flex flex-col w-full space-y-2"
      >
        <div
          class="font-semibold"
        >
          Select County:
        </div>
        <button
          aria-autocomplete="none"
          aria-controls="radix-:rf:"
          aria-expanded="false"
          class="flex h-10 items-center justify-between rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 w-[180px]"
          data-placeholder=""
          data-state="closed"
          dir="ltr"
          role="combobox"
          type="button"
        >
          0
           Selected
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down h-4 w-4 opacity-50"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </button>
      </div>
      <div
        class="flex flex-col w-full space-y-2"
      >
        <div
          class="font-semibold"
        >
          Filter By Rating:
        </div>
        <div
          class="grid grid-cols-2 gap-2"
        >
          <input
            class="flex h-10 w-full rounded-md border focus-visible:outline-none border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground disabled:cursor-not-allowed disabled:opacity-50"
            placeholder="Lower Rating"
            type="number"
            value="0"
          />
          <input
            class="flex h-10 w-full rounded-md border focus-visible:outline-none border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground disabled:cursor-not-allowed disabled:opacity-50"
            placeholder="Upper Rating"
            type="number"
            value="0"
          />
        </div>
      </div>
      <div
        class="items-top flex flex-row space-x-2"
      >
        <button
          aria-checked="false"
          class="peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground"
          data-state="unchecked"
          role="checkbox"
          type="button"
          value="on"
        />
        <div
          class="grid gap-1.5 leading-none"
        >
          <label
            class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
            for="terms1"
          >
            Sort By Name/Address (Z - A)
          </label>
        </div>
      </div>
      <button
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2 mt-4"
      >
        Apply
      </button>
    </div>
    <div
      class="w-full h-full flex flex-col items-center justify-center"
    >
      <div
        class="animate-spin"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          version="1.1"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 16c-2.137 0-4.146-0.832-5.657-2.343s-2.343-3.52-2.343-5.657c0-1.513 0.425-2.986 1.228-4.261 0.781-1.239 1.885-2.24 3.193-2.895l0.672 1.341c-1.063 0.533-1.961 1.347-2.596 2.354-0.652 1.034-0.997 2.231-0.997 3.461 0 3.584 2.916 6.5 6.5 6.5s6.5-2.916 6.5-6.5c0-1.23-0.345-2.426-0.997-3.461-0.635-1.008-1.533-1.822-2.596-2.354l0.672-1.341c1.308 0.655 2.412 1.656 3.193 2.895 0.803 1.274 1.228 2.748 1.228 4.261 0 2.137-0.832 4.146-2.343 5.657s-3.52 2.343-5.657 2.343z"
          />
        </svg>
        <div
          class="opacity-0 absolute"
        >
          Loading
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Model Pages Load Rehabs page matches snapshot 1`] = `
<div>
  <div
    class="flex flex-col space-y-4"
  >
    <div
      class="text-2xl font-semibold"
      id="rehab_text"
    >
      Rehab Resources
    </div>
    <div
      class="rounded-lg border bg-card text-card-foreground shadow-sm flex flex-col gap-2 p-4"
    >
      <div
        class="text-xl font-semibold"
      >
        Filters
      </div>
      <div
        class="flex flex-col w-full space-y-2"
      >
        <div
          class="font-semibold"
        >
          Search: 
        </div>
        <input
          class="flex h-10 w-full rounded-md border focus-visible:outline-none border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground disabled:cursor-not-allowed disabled:opacity-50"
          placeholder="Instance Name"
          value=""
        />
      </div>
      <div
        class="flex flex-col w-full space-y-2"
      >
        <div
          class="font-semibold"
        >
          Treatment Type:
        </div>
        <button
          aria-autocomplete="none"
          aria-controls="radix-:r6:"
          aria-expanded="false"
          class="flex h-10 items-center justify-between rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 w-[180px]"
          data-placeholder=""
          data-state="closed"
          dir="ltr"
          role="combobox"
          type="button"
        >
          <span
            style="pointer-events: none;"
          >
            Select Type
          </span>
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down h-4 w-4 opacity-50"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </button>
      </div>
      <div
        class="flex flex-col w-full space-y-2"
      >
        <div
          class="font-semibold"
        >
          Select Payment Type:
        </div>
        <button
          aria-autocomplete="none"
          aria-controls="radix-:r7:"
          aria-expanded="false"
          class="flex h-10 items-center justify-between rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 w-[180px]"
          data-placeholder=""
          data-state="closed"
          dir="ltr"
          role="combobox"
          type="button"
        >
          0
           Selected
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down h-4 w-4 opacity-50"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </button>
      </div>
      <div
        class="flex flex-col w-full space-y-2"
      >
        <div
          class="font-semibold"
        >
          Select Services:
        </div>
        <button
          aria-autocomplete="none"
          aria-controls="radix-:r8:"
          aria-expanded="false"
          class="flex h-10 items-center justify-between rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 w-[180px]"
          data-placeholder=""
          data-state="closed"
          dir="ltr"
          role="combobox"
          type="button"
        >
          0
           Selected
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down h-4 w-4 opacity-50"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </button>
      </div>
      <div
        class="items-top flex space-x-2"
      >
        <button
          aria-checked="false"
          class="peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground"
          data-state="unchecked"
          role="checkbox"
          type="button"
          value="on"
        />
        <div
          class="grid gap-1.5 leading-none"
        >
          <label
            class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
            for="terms1"
          >
            Sort By Name/Address (Z - A)
          </label>
        </div>
      </div>
      <button
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2 mt-4"
      >
        Apply
      </button>
    </div>
    <div
      class="w-full h-full flex flex-col items-center justify-center"
    >
      <div
        class="animate-spin"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          version="1.1"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 16c-2.137 0-4.146-0.832-5.657-2.343s-2.343-3.52-2.343-5.657c0-1.513 0.425-2.986 1.228-4.261 0.781-1.239 1.885-2.24 3.193-2.895l0.672 1.341c-1.063 0.533-1.961 1.347-2.596 2.354-0.652 1.034-0.997 2.231-0.997 3.461 0 3.584 2.916 6.5 6.5 6.5s6.5-2.916 6.5-6.5c0-1.23-0.345-2.426-0.997-3.461-0.635-1.008-1.533-1.822-2.596-2.354l0.672-1.341c1.308 0.655 2.412 1.656 3.193 2.895 0.803 1.274 1.228 2.748 1.228 4.261 0 2.137-0.832 4.146-2.343 5.657s-3.52 2.343-5.657 2.343z"
          />
        </svg>
        <div
          class="opacity-0 absolute"
        >
          Loading
        </div>
      </div>
    </div>
  </div>
</div>
`;
